# django-url-tokenizer

./: .flake8  .gitignore  .pre-commit-config.yaml  README.rst  pyproject.toml  requirements.txt  setup.cfg  setup.py
tests/: boot_django.py  load_tests.py  models.py  test_urltokenizer.py
urltokenizer/: apps.py  builtin_callbacks.py  callbacks.py  enums.py  exceptions.py  managers.py  mixins.py  models.py  serializers.py  token_generator.py  tokenizer.py  utils.py  views.py
urltokenizer/callbacks/: __init__.py  builtins.py
urltokenizer/migrations/: 0001_initial.py
urltokenizer/sendgrid/: api.py
