[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "django-url-tokenizer"
version = "0.1.59"
description = "A python package that provides a Django app that allows you to generate tokenized urls and send them to users via email."
readme = { file = "README.rst", content-type = "text/x-rst" }
license = "MIT"
authors = [
    { name = "Sergio Rodríguez", email = "srodriguez3441@gmail.com" }
]
maintainers = [
    { name = "Sergio Rodríguez", email = "srodriguez3441@gmail.com" }
]
requires-python = ">=3.8"

dependencies = [
    "Django>=3.2"
]

classifiers = [
    "Framework :: Django",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4.0",
    "Framework :: Django :: 4.1",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.optional-dependencies]
serializers = [
    "djangorestframework"
]
dev = [
    "pytest",
    "pytest-django",
    "tox",
    "pre-commit",
    "build",
    "twine"
]

sendgrid = [
    "sendgrid",
    "jinja2",
    "relattrs"
]

sms = [
    "django-sms[twilio]",
    "jinja2",
    "relattrs"
]

[project.urls]
Homepage = "https://github.com/nibblex/django-url-tokenizer"
Repository = "https://github.com/nibblex/django-url-tokenizer"
Issues = "https://github.com/nibblex/django-url-tokenizer/issues"

[tool.setuptools.packages.find]
exclude = ["tests*", "docs*"]

[tool.ruff]
line-length = 90

[tool.black]
line-length = 90
exclude = '''
/(
    \.git
  | \.venv
  | migrations
)/
'''

[tool.isort]
profile = "black"
known_django = ["django"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "DJANGO", "FIRSTPARTY", "LOCALFOLDER"]
skip = [
    ".git",
    ".venv",
    "migrations",
    "settings.py",
    "wsgi.py",
    "asgi.py",
    "manage.py",
    "apps.py",
    "admin.py",
]
