[metadata]
name = django-url-tokenizer
version = 0.1.57
description = A python package that provides a Django app that allows you to generate tokenized urls and send them to users via email.
long_description = file: README.rst, LICENSE
author = Sergio Rodríguez
author_email = srodriguez3441@gmail.com
maintainer = Sergio Rodríguez
maintainer_email = srodriguez3441@gmail.com
url = https://github.com/nibblex/django-url-tokenizer
classifiers =
    Framework :: Django
    Framework :: Django :: 3.1
    Framework :: Django :: 3.2
    Framework :: Django :: 4.0
    Framework :: Django :: 4.1
    Framework :: Django :: 4.2
    Framework :: Django :: 5.0
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Topic :: Software Development :: Libraries :: Python Modules
license = MIT

[options]
include_package_data = True
python_requires = >=3.6
setup_requires =
    setuptools>=42
install_requires=
    Django>=3.1

[options.extras_require]
serializers = djangorestframework
sendgrid =
    sendgrid
    jinja2
    relattrs
sms =
    django-sms[twilio]
    jinja2
    relattrs
